--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "json-server -d 750 -w -p 3333 ./server.js"
   },
   "dependencies": {
+    "json-server": "^0.16.3",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
