--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "json-server": "^0.16.3",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
+    "@types/react-virtualized": "^9.21.11",
     "typescript": "^4.2.4"
   }
 }
